--- a/html/account.html
+++ b/html/account.html
@@ -1,24 +1,25 @@
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Overzichtspagina</title>
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body id="account">
-<header>
-    <nav>
-        <ul>
-            <li><a href="index.html"><img src="/images/transavia_logo_rond.svg" alt="Transavia">Transavia</a></li>
-            <li><a href="verhalen.html"><img src="/images/verhalen.svg" alt="verhalen">Verhalen</a></li>
-            <li><a href="account.html"><img src="/images/account.svg" alt="verhalen">Account</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="../index.html"><img src="../images/transavia_logo_rond.svg" alt="Transavia">Transavia</a></li>
+                <li><a href="/html/verhalen.html"><img src="../images/verhalen.svg" alt="verhalen">Verhalen</a></li>
+                <li><a href="/html/account.html"><img src="../images/account.svg" alt="verhalen">Account</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<form action="inloggen" method="post">
-       <h1>Inloggen</h1>
+    <form action="inloggen" method="post">
+        <h1>Inloggen</h1>
         <label>
             Name:
             <input type="text" id="name" name="user_name" />
@@ -31,13 +32,8 @@
 
         <button type="submit">Inloggen</button>
         <p>Nog geen Transavia account?<a href="">Klik hier!</a></p>
-
-</form>
-
-
-
-
-
+    </form>
 
 </body>
+
 </html>
