--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="../index.html"><img src="../images/transavia_logo_rond.svg" alt="Transavia">Transavia</a></li>
-                <li><a href="/html/verhalen.html"><img src="../images/verhalen.svg" alt="verhalen">Verhalen</a></li>
-                <li><a href="/html/account.html"><img src="../images/account.svg" alt="verhalen">Account</a></li>
+                <li><a href="./index.html"><img src="./images/transavia_logo_rond.svg" alt="Transavia">Transavia</a></li>
+                <li><a href="./verhalen.html"><img src="./images/verhalen.svg" alt="verhalen">Verhalen</a></li>
+                <li><a href="./account.html"><img src="./images/account.svg" alt="verhalen">Account</a></li>
             </ul>
         </nav>
         <h1> 99 Verhalen mee op reis </h1>
