verhalen afbeeldingen fix

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div class="container">
             <article>
-                <img src="/verhalen/onomatopee.jpg" alt="afbeelding verhaal">
+                <img src="./verhalen/onomatopee.jpg" alt="afbeelding verhaal">
                 <div class="verhalen">
                     <h3>Onomatopee</h3>
                     <footer>
@@ -44,7 +44,7 @@
             </article>
 
             <article>
-                <img src="/verhalen/verliefd.jpg" alt="afbeelding verhaal">
+                <img src="./verhalen/verliefd.jpg" alt="afbeelding verhaal">
                 <div class="verhalen">
                     <h3>Verliefd</h3>
                     <footer>
@@ -63,7 +63,7 @@
             </article>
 
             <article>
-                <img src="/verhalen/poepen.jpg" alt="afbeelding verhaal">
+                <img src="./verhalen/poepen.jpg" alt="afbeelding verhaal">
                 <div class="verhalen">
                     <h3>Poepen</h3>
                     <footer>
@@ -82,7 +82,7 @@
             </article>
 
             <article>
-                <img src="/verhalen/droom.jpg" alt="afbeelding verhaal">
+                <img src="./verhalen/droom.jpg" alt="afbeelding verhaal">
                 <div class="verhalen">
                     <h3>Droom</h3>
                     <footer>
@@ -101,7 +101,7 @@
             </article>
 
             <article>
-                <img src="/verhalen/sportcommentaar.jpg" alt="afbeelding verhaal">
+                <img src="./verhalen/sportcommentaar.jpg" alt="afbeelding verhaal">
                 <div class="verhalen">
                     <h3>Sportcommentaar</h3>
                     <footer>
@@ -120,7 +120,7 @@
             </article>
 
             <article>
-                <img src="/verhalen/stoned.jpg" alt="afbeelding verhaal">
+                <img src="./verhalen/stoned.jpg" alt="afbeelding verhaal">
                 <div class="verhalen">
                     <h3>Stoned</h3>
                     <footer>
@@ -139,7 +139,7 @@
             </article>
 
             <article>
-                <img src="/verhalen/decockenhetraadsel.png" alt="afbeelding verhaal">
+                <img src="./verhalen/decockenhetraadsel.png" alt="afbeelding verhaal">
                 <div class="verhalen">
                     <h3>De cock</h3>
                     <footer>
@@ -158,7 +158,7 @@
             </article>
 
             <article>
-                <img src="/verhalen/onomatopee.jpg" alt="afbeelding verhaal">
+                <img src="./verhalen/onomatopee.jpg" alt="afbeelding verhaal">
                 <div class="verhalen">
                     <h3>Onomatopee</h3>
                     <footer>
@@ -177,7 +177,7 @@
             </article>
 
             <article>
-                <img src="/verhalen/verliefd.jpg" alt="afbeelding verhaal">
+                <img src="./verhalen/verliefd.jpg" alt="afbeelding verhaal">
                 <div class="verhalen">
                     <h3>Verliefd</h3>
                     <footer>
