--- a/account.html
+++ b/account.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./index.html"><img src="../images/transavia_logo_rond.svg" alt="Transavia">Transavia</a></li>
+                <li><a href="./index.html"><img src="./images/transavia_logo_rond.svg" alt="Transavia">Transavia</a></li>
                 <li><a href="./verhalen.html"><img src="./images/verhalen.svg" alt="verhalen">Verhalen</a></li>
                 <li><a href="./account.html"><img src="./images/account.svg" alt="verhalen">Account</a></li>
             </ul>
