--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
         <div class="bundels">
             <article>
-                <img src="/images/bundels.jpg" alt="afbeelding verhaal">
+                <img src="./images/bundels.jpg" alt="afbeelding verhaal">
                 <div class="verhalen">
                     <h3>Bundel 1</h3>
                     <p>Dramatisch, Angst</p>
@@ -272,7 +272,7 @@
             </article>
 
             <article>
-                <img src="/images/bundels.jpg" alt="afbeelding verhaal">
+                <img src="./images/bundels.jpg" alt="afbeelding verhaal">
                 <div class="verhalen">
                     <h3>Bundel 2</h3>
                     <p>Inspirerend, Dramatisch, Vrolijk</p>
@@ -284,7 +284,7 @@
             </article>
 
             <article>
-                <img src="/images/bundels.jpg" alt="afbeelding verhaal">
+                <img src="./images/bundels.jpg" alt="afbeelding verhaal">
                 <div class="verhalen">
                     <h3>Bundel 3</h3>
                     <p>Mysterieus, Verdrietig</p>
