--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Overzichtspagina</title>
+    <meta name="author" content="Violet Jim">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
+    <title>Overzichtspagina</title>
 </head>
 
 <body>
-    <header>
+    <header id="homepage">
         <nav>
             <ul>
                 <li><a href="./index.html"><img src="./images/transavia_logo_rond.svg" alt="Transavia">Transavia</a></li>
@@ -23,95 +24,19 @@
     <section>
         <h2> Populaire verhalen </h2>
 
-        <div class="container">
+        <div>
             <article>
-                <img src="./verhalen/onomatopee.jpg" alt="afbeelding verhaal">
+                <a href="./verhalen.html"><img src="./verhalen/onomatopee.jpg" alt="afbeelding verhaal"></a>
                 <div class="verhalen">
                     <h3>Onomatopee</h3>
                     <footer>
-                        <h4>Rating</h4>
+                        <h4>Rating: 5.939</h4>
                         <ul>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                        </ul>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
-                    </footer>
-                </div>
-            </article>
-
-            <article>
-                <img src="./verhalen/verliefd.jpg" alt="afbeelding verhaal">
-                <div class="verhalen">
-                    <h3>Verliefd</h3>
-                    <footer>
-                        <h4>Rating</h4>
-                        <ul>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                        </ul>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
-                    </footer>
-                </div>
-            </article>
-
-            <article>
-                <img src="./verhalen/poepen.jpg" alt="afbeelding verhaal">
-                <div class="verhalen">
-                    <h3>Poepen</h3>
-                    <footer>
-                        <h4>Rating</h4>
-                        <ul>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                        </ul>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
-                    </footer>
-                </div>
-            </article>
-
-            <article>
-                <img src="./verhalen/droom.jpg" alt="afbeelding verhaal">
-                <div class="verhalen">
-                    <h3>Droom</h3>
-                    <footer>
-                        <h4>Rating</h4>
-                        <ul>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                        </ul>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
-                    </footer>
-                </div>
-            </article>
-
-            <article>
-                <img src="./verhalen/sportcommentaar.jpg" alt="afbeelding verhaal">
-                <div class="verhalen">
-                    <h3>Sportcommentaar</h3>
-                    <footer>
-                        <h4>Rating</h4>
-                        <ul>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
                         <a href="">Download</a>
                         <a href="">Leeslijst</a>
@@ -124,51 +49,13 @@
                 <div class="verhalen">
                     <h3>Stoned</h3>
                     <footer>
-                        <h4>Rating</h4>
+                        <h4>Rating: 5.201</h4>
                         <ul>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                        </ul>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
-                    </footer>
-                </div>
-            </article>
-
-            <article>
-                <img src="./verhalen/decockenhetraadsel.png" alt="afbeelding verhaal">
-                <div class="verhalen">
-                    <h3>De cock</h3>
-                    <footer>
-                        <h4>Rating</h4>
-                        <ul>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                        </ul>
-                        <a href="">Download</a>
-                        <a href="">Leeslijst</a>
-                    </footer>
-                </div>
-            </article>
-
-            <article>
-                <img src="./verhalen/onomatopee.jpg" alt="afbeelding verhaal">
-                <div class="verhalen">
-                    <h3>Onomatopee</h3>
-                    <footer>
-                        <h4>Rating</h4>
-                        <ul>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
                         <a href="">Download</a>
                         <a href="">Leeslijst</a>
@@ -181,13 +68,108 @@
                 <div class="verhalen">
                     <h3>Verliefd</h3>
                     <footer>
-                        <h4>Rating</h4>
+                        <h4>Rating 4.998</h4>
                         <ul>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
-                            <li><img alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                        </ul>
+                        <a href="">Download</a>
+                        <a href="">Leeslijst</a>
+                    </footer>
+                </div>
+            </article>
+
+            <article>
+                <img src="./verhalen/poepen.jpg" alt="afbeelding verhaal">
+                <div class="verhalen">
+                    <h3>Poepen</h3>
+                    <footer>
+                        <h4>Rating: 4.508</h4>
+                        <ul>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                        </ul>
+                        <a href="">Download</a>
+                        <a href="">Leeslijst</a>
+                    </footer>
+                </div>
+            </article>
+
+            <article>
+                <img src="./verhalen/droom.jpg" alt="afbeelding verhaal">
+                <div class="verhalen">
+                    <h3>Droom</h3>
+                    <footer>
+                        <h4>Rating 3.753</h4>
+                        <ul>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                        </ul>
+                        <a href="">Download</a>
+                        <a href="">Leeslijst</a>
+                    </footer>
+                </div>
+            </article>
+
+            <article>
+                <img src="./verhalen/sportcommentaar.jpg" alt="afbeelding verhaal">
+                <div class="verhalen">
+                    <h3>Sportcommentaar</h3>
+                    <footer>
+                        <h4>Rating 3.596</h4>
+                        <ul>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                        </ul>
+                        <a href="">Download</a>
+                        <a href="">Leeslijst</a>
+                    </footer>
+                </div>
+            </article>
+
+            <article>
+                <img src="./verhalen/onomatopee.jpg" alt="afbeelding verhaal">
+                <div class="verhalen">
+                    <h3>Onomatopee</h3>
+                    <footer>
+                        <h4>Rating 2.864</h4>
+                        <ul>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                        </ul>
+                        <a href="">Download</a>
+                        <a href="">Leeslijst</a>
+                    </footer>
+                </div>
+            </article>
+
+            <article>
+                <img src="./verhalen/stoned.jpg" alt="afbeelding verhaal">
+                <div class="verhalen">
+                    <h3>Stoned</h3>
+                    <footer>
+                        <h4>Rating 1.573</h4>
+                        <ul>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
                         </ul>
                         <a href="">Download</a>
                         <a href="">Leeslijst</a>
@@ -213,42 +195,42 @@
             <div class=items>
                 <fieldset>
                     <legend>Sorteer op</legend>
-                    <label><input type="radio" name="sorteerop">Populair</label>
-                    <label><input type="radio" name="sorteer op">A-Z</label>
-                    <label><input type="radio" name="sorteer op">1-99</label>
+                    <label><input type="radio" name="sorteerop"> Populair</label>
+                    <label><input type="radio" name="sorteerop"> A-Z</label>
+                    <label><input type="radio" name="sorteerop"> 1-99</label>
                 </fieldset>
             </div>
 
             <div class=items>
                 <fieldset>
                     <legend>Leestijd</legend>
-                    <label><input type="checkbox" name="leestijd">1 uur</label>
-                    <label><input type="checkbox" name="leestijd">2 uur</label>
-                    <label><input type="checkbox" name="leestijd">3 uur</label>
+                    <label><input type="checkbox" name="leestijd"> 1 uur</label>
+                    <label><input type="checkbox" name="leestijd"> 2 uur</label>
+                    <label><input type="checkbox" name="leestijd"> 3 uur</label>
                 </fieldset>
             </div>
 
             <div class=items>
                 <fieldset>
                     <legend>Sfeer</legend>
-                    <label><input type="checkbox" name="sfeer">Dramatisch</label>
-                    <label><input type="checkbox" name="sfeer">Inspirerend</label>
-                    <label><input type="checkbox" name="sfeer">Mysterieus</label>
+                    <label><input type="checkbox" name="sfeer"> Dramatisch</label>
+                    <label><input type="checkbox" name="sfeer"> Inspirerend</label>
+                    <label><input type="checkbox" name="sfeer"> Mysterieus</label>
                 </fieldset>
             </div>
 
             <div class=items>
                 <fieldset>
                     <legend>Emotie</legend>
-                    <label><input type="checkbox" name="emotie">Angst</label>
-                    <label><input type="checkbox" name="emotie">Boos</label>
-                    <label><input type="checkbox" name="emotie">Verdrietig</label>
-                    <label><input type="checkbox" name="emotie">Vrolijk</label>
+                    <label><input type="checkbox" name="emotie"> Angst</label>
+                    <label><input type="checkbox" name="emotie"> Boos</label>
+                    <label><input type="checkbox" name="emotie"> Verdrietig</label>
+                    <label><input type="checkbox" name="emotie"> Vrolijk</label>
                 </fieldset>
             </div>
         </form>
 
-        <button>Stel bundel samen</button>
+        <a href="./bundel.html#anchor">Stel bundel samen</a>
 
     </section>
 
@@ -294,7 +276,41 @@
                     </footer>
                 </div>
             </article>
+            <article>
+                <img src="./images/bundels.jpg" alt="afbeelding verhaal">
+                <div class="verhalen">
+                    <h3>Bundel 4</h3>
+                    <p>Dramatisch, Angst</p>
+                    <footer>
+                        <a href="">Download</a>
+                        <a href="">Leeslijst</a>
+                    </footer>
+                </div>
+            </article>
 
+            <article>
+                <img src="./images/bundels.jpg" alt="afbeelding verhaal">
+                <div class="verhalen">
+                    <h3>Bundel 5</h3>
+                    <p>Inspirerend, Dramatisch, Vrolijk</p>
+                    <footer>
+                        <a href="">Download</a>
+                        <a href="">Leeslijst</a>
+                    </footer>
+                </div>
+            </article>
+
+            <article>
+                <img src="./images/bundels.jpg" alt="afbeelding verhaal">
+                <div class="verhalen">
+                    <h3>Bundel 6</h3>
+                    <p>Mysterieus, Verdrietig</p>
+                    <footer>
+                        <a href="">Download</a>
+                        <a href="">Leeslijst</a>
+                    </footer>
+                </div>
+            </article>
         </div>
 
     </section>
