--- a/account_ingelogd.html
+++ b/account_ingelogd.html
@@ -8,37 +8,179 @@
     <title>Account</title>
 </head>
 
-<body id="account" action="account_ingelogd.html">
+<body id="ingelogd" action="account_ingelogd.html">
     <header>
         <nav>
             <ul>
                 <li><a href="./index.html"><img src="./images/transavia_logo_rond.svg" alt="Transavia">Transavia</a></li>
                 <li><a href="./verhalen.html"><img src="./images/verhalen.svg" alt="verhalen">Verhalen</a></li>
-                <li><a href="./account.html"><img src="./images/account.svg" alt="verhalen">Account</a></li>
+                <li><a href="./account.html"><img src="./images/violetjim.png" alt="verhalen">Welkom, Violet!</a></li>
             </ul>
         </nav>
     </header>
 
-    <form action="inloggen" method="post">
-        <fieldset>
-            <legend>Inloggen</legend>
+    <section>
+        <h2>Opgeslagen Verhalen </h2>
 
-            <label for="name">Voornaam</label>
-            <input id="name" required>
+        <div>
+            <article>
+                <a href="./verhalen.html"><img src="./verhalen/onomatopee.jpg" alt="afbeelding verhaal"></a>
+                <div class="verhalen">
+                    <h3>Onomatopee</h3>
+                    <footer>
+                        <h4>Rating: 5.939</h4>
+                        <ul>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                        </ul>
+                        <a href="">Download</a>
+                        <a href=""><img src="images/hartje.svg" alt="hartje"></a>
+                    </footer>
+                </div>
+            </article>
 
-            <label for="surname">Achternaam</label>
-            <input id="surname" required>
+            <article>
+                <img src="./verhalen/stoned.jpg" alt="afbeelding verhaal">
+                <div class="verhalen">
+                    <h3>Stoned</h3>
+                    <footer>
+                        <h4>Rating: 5.201</h4>
+                        <ul>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                        </ul>
+                        <a href="">Download</a>
+                        <a href=""><img src="images/hartje.svg" alt="hartje"></a>
+                    </footer>
+                </div>
+            </article>
 
-            <label for="mail">E-mail</label>
-            <input id="mail" required>
+            <article>
+                <img src="./verhalen/verliefd.jpg" alt="afbeelding verhaal">
+                <div class="verhalen">
+                    <h3>Verliefd</h3>
+                    <footer>
+                        <h4>Rating 4.998</h4>
+                        <ul>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                        </ul>
+                        <a href="">Download</a>
+                        <a href=""><img src="images/hartje.svg" alt="hartje"></a>
+                    </footer>
+                </div>
+            </article>
 
-            <p class="feedback">Het formulier is goed ingevuld!</p>
+            <article>
+                <img src="./verhalen/poepen.jpg" alt="afbeelding verhaal">
+                <div class="verhalen">
+                    <h3>Poepen</h3>
+                    <footer>
+                        <h4>Rating: 4.508</h4>
+                        <ul>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                        </ul>
+                        <a href="">Download</a>
+                        <a href=""><img src="images/hartje.svg" alt="hartje"></a>
+                    </footer>
+                </div>
+            </article>
 
-            <button id="login" type="submit">Inloggen</button>
+            <article>
+                <img src="./verhalen/droom.jpg" alt="afbeelding verhaal">
+                <div class="verhalen">
+                    <h3>Droom</h3>
+                    <footer>
+                        <h4>Rating 3.753</h4>
+                        <ul>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                        </ul>
+                        <a href="">Download</a>
+                        <a href=""><img src="images/hartje.svg" alt="hartje"></a>
+                    </footer>
+                </div>
+            </article>
 
-            <p>Nog geen Transavia account?<a href="">Klik hier!</a></p>
-        </fieldset>
-    </form>
+            <article>
+                <img src="./verhalen/sportcommentaar.jpg" alt="afbeelding verhaal">
+                <div class="verhalen">
+                    <h3>Sportcommentaar</h3>
+                    <footer>
+                        <h4>Rating 3.596</h4>
+                        <ul>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                        </ul>
+                        <a href="">Download</a>
+                        <a href=""><img src="images/hartje.svg" alt="hartje"></a>
+                    </footer>
+                </div>
+            </article>
+
+            <article>
+                <img src="./verhalen/onomatopee.jpg" alt="afbeelding verhaal">
+                <div class="verhalen">
+                    <h3>Onomatopee</h3>
+                    <footer>
+                        <h4>Rating 2.864</h4>
+                        <ul>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                        </ul>
+                        <a href="">Download</a>
+                        <a href=""><img src="images/hartje.svg" alt="hartje"></a>
+                    </footer>
+                </div>
+            </article>
+
+            <article>
+                <img src="./verhalen/stoned.jpg" alt="afbeelding verhaal">
+                <div class="verhalen">
+                    <h3>Stoned</h3>
+                    <footer>
+                        <h4>Rating 1.573</h4>
+                        <ul>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                            <li><img src="images/star.svg" alt="sterretje"></li>
+                        </ul>
+                        <a href="">Download</a>
+                        <a href=""><img src="images/hartje.svg" alt="hartje"></a>
+                    </footer>
+                </div>
+            </article>
+
+
+        </div>
+
+    </section>
+
+    <footer> © Transavia 2018 • Violet Jim</footer>
 
 </body>
 
