verhalen pagina responsive

--- a/account.html
+++ b/account.html
@@ -19,11 +19,10 @@
         </nav>
     </header>
 
-    <form action="inloggen" method="post">
+    <form action="account_ingelogd.html" method="get">
         <fieldset>
             <legend>Inloggen</legend>
 
-<!--
             <label for="input-name">Voornaam</label>
             <input id="name" type="text" placeholder="Voornaam" required>
 
@@ -32,21 +31,10 @@
 
             <label for="input-email">E-mail</label>
             <input id="email" type="email" placeholder="gebruiker@mail.nl" required>
--->
 
-            <label for="name">Voornaam</label>
-            <input id="name" placeholder="Voornaam" required>
-
-            <label for="surname">Achternaam</label>
-            <input id="surname" placeholder="Achternaam" required>
-
-            <label for="email">E-mail</label>
-            <input id="email" placeholder="gebruiker@mail.nl" required>
-
+            <input type="submit" value="inloggen">
 
             <p class="feedback">Het formulier is goed ingevuld!</p>
-
-            <a href="./account_ingelogd.html" id="login" type="submit">Inloggen</a>
 
             <p>Nog geen Transavia account?<a href="">Klik hier!</a></p>
 
