--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@
             <div class=items>
                 <fieldset>
                     <legend>Emotie</legend>
-                    <label><input type="checkbox" name="emotie"> Angst</label>
-                    <label><input type="checkbox" name="emotie"> Boos</label>
-                    <label><input type="checkbox" name="emotie"> Verdrietig</label>
-                    <label><input type="checkbox" name="emotie"> Vrolijk</label>
+                    <label><span></span><input type="checkbox" name="emotie"> Angst</label>
+                    <label><span></span><input type="checkbox" name="emotie"> Boos</label>
+                    <label><span></span><input type="checkbox" name="emotie"> Verdrietig</label>
+                    <label><span></span><input type="checkbox" name="emotie"> Vrolijk</label>
                 </fieldset>
             </div>
         </form>
